gcc/testsuite/g++.dg/cpp1y/auto-fn2.C
// { dg-do compile { target c++14 } }

auto f() { return f(); }	// { dg-error "auto" }
